positional_derive/tests/ui/enums-with-wrong-matcher.stderr
error: expected an expression as matcher

         = help: example syntax: `#[matcher(row[0..2] == "00")]`

 --> tests/ui/enums-with-wrong-matcher.rs:5:14
  |
5 |     #[matcher(struct)]
  |              ^^^^^^^^
